Prevent chevron links from wrapping if available width shrinks

--- a/src/app/base/components/node/OverviewCard/_index.scss
+++ b/src/app/base/components/node/OverviewCard/_index.scss
@@ -79,6 +79,10 @@
           max-width: 50rem;
         }
       }
+
+      .p-link__chevron {
+        white-space: nowrap;
+      }
     }
 
     @media only screen and (max-width: $breakpoint-large) {
